# carma_pack

./: .gitignore  LICENSE.txt  Linux_install.txt  MacOSX_install.txt  README.md  index.html  params.json  run_zelkjos_lcurve.py
src/: Makefile  boost_python_wrapper.cpp  carma_pack.py  carmcmc.cpp  carmcmc.hpp  carpack.cpp  carpack.hpp  ceres.cpp  kfilter.cpp  pyproject.toml  random.cpp  samplers.cpp  setup.py  steps.cpp  testCarmcmc.py  testRRlyrae.py
src/carmcmc/: __init__.py  carma_pack.py  samplers.py
src/examples/: 1640797.txt  testCarmcmc.py  testHang.py  testRRlyrae.py
src/include/: carmcmc.hpp  carpack.hpp  ceres.hpp  kfilter.hpp  parameters.hpp  samplers.hpp  steps.hpp
src/lib/carmcmc/: __init__.py  carma_pack.py
src/paper/: RRLyrae.py  carma_paper.py
src/paper/data/: 1627677  RRLyrae.txt  kepler_zw229_Q7.fits  mcg-6-30-15_rxte_xmm.txt  zw229_long2.fits
src/paper/plots/: 1627677_aic.eps  1627677_fit_quality.eps  1627677_psd.eps  RRLyrae_aic.eps  RRLyrae_fit_quality.eps  RRLyrae_psd.eps  car5_irregular_aic.eps  car5_irregular_dic.eps  car5_irregular_fit_quality.eps  car5_irregular_interp.eps  car5_irregular_psd.eps  car5_irregular_tseries.eps  car5_nonstationary_aic.eps  car5_nonstationary_fit_quality.eps  car5_nonstationary_interp.eps  car5_nonstationary_psd.eps  car5_nonstationary_tseries.eps  car5_regular_aic.eps  car5_regular_fit_quality.eps  car5_regular_psd.eps  (+24 more)
src/tests/: CHIC.pickle  CHIC.py  testCarmcmc.py
src/ups/: carma_pack.table
src/yamcmcpp/: proposals.cpp  proposals.hpp  random.cpp  random.hpp  samplers.hpp  steps.cpp
(+19 files in other folders)
