[build-system]
requires = [ "setuptools", "numpy" ]
build-backend = "setuptools.build_meta"

[project]
name = "carmcmc"
description = "An MCMC sampler for performing Bayesian inference on continuous time autoregressive moving average models."
authors = [
    { name = "Brandon Kelly", email = "bckelly80@gmail.com" },
]
license = { text = "MIT" }
version="0.1.0"
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

[project.urls]
repository = "https://github.com/brandonckelly/carma_pack.git"
